Fix security module